--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,9 @@
-# Uncomment the following line to enable deep sleep
-# CONFIG_ZMK_SLEEP=y
+# Enable deep sleep support (default=n)
+CONFIG_ZMK_SLEEP=y
+# Milliseconds of inactivity before entering idle state (default)
+# CONFIG_ZMK_IDLE_TIMEOUT=30000
+# Milliseconds of inactivity before entering deep sleep (default)
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
