--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,7 +1,7 @@
 # Enable deep sleep support (default=n)
 CONFIG_ZMK_SLEEP=y
-# Milliseconds of inactivity before entering idle state (default)
-# CONFIG_ZMK_IDLE_TIMEOUT=30000
+# Milliseconds of inactivity before entering idle state (default=30000)
+CONFIG_ZMK_IDLE_TIMEOUT=600000
 # Milliseconds of inactivity before entering deep sleep (default)
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
